# rdb

./: Cargo.toml  README.md  clippy.toml  rustfmt.toml
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
rdb-application/: Cargo.toml
rdb-domain/: Cargo.toml
rdb-domain/src/: column.rs  data_type.rs  database.rs  error.rs  ids.rs  lib.rs  row.rs  table.rs  value.rs
rdb-domain/tests/: domain_tests.rs  proptest_value.proptest-regressions  proptest_value.rs
rdb-infrastructure/: Cargo.toml
rdb-infrastructure/src/: buffer_pool.rs  file_io.rs  lib.rs
rdb-interface/: Cargo.toml
rdb-sql/: Cargo.toml
rdb-storage/: Cargo.toml
rdb-storage/src/: lib.rs  page.rs  pager.rs  test_support.rs
rdb-storage/tests/: page_tests.rs  pager_tests.rs  proptest_page.rs
specs/001-rdb-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rdb-core/checklists/: requirements.md
specs/001-rdb-core/contracts/: public-api.md  sql-api.md  storage-api.md
